--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,16 @@
-title:            Site Title
-description:      Describe your website.
+title:            andrew brooks
+description:      homepage
 # Your site's domain goes here. Leave localhost server or blank when working locally.
-url:              http://localhost:4000
+#url:              http://localhost:4000
+url:             http://brooksandrew.github.io/
 disqus_shortname:
 
 # Owner/author information
 owner:
-  name:           Your Name
+  name:           andrew brooks
   avatar:         bio-photo.jpg
-  bio:            "Describe your self."
-  email:          your@email.com
+  bio:            "internationalist turned economist turned data scientist"
+  email:          andrewbrooksct@gmail.com
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
   twitter:
   facebook:
@@ -41,8 +42,6 @@ links:
     url: /posts/
   - title: Theme Setup
     url: /theme-setup/
-  - title: Made Mistakes
-    url: http://mademistakes.com
     external: true
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
