--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title:            andrew brooks
 description:      homepage
 # Your site's domain goes here. Leave localhost server or blank when working locally.
 #url:              http://localhost:4000
-url:             http://brooksandrew.github.io/
+url:             http://brooksandrew.github.io
 disqus_shortname:
 
 # Owner/author information
