changing images.  updating homepage

--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 title:            andrew brooks
 description:      homepage
 # Your site's domain goes here. Leave localhost server or blank when working locally.
-#url:              http://localhost:4000
-url:             http://brooksandrew.github.io
+url:              http://localhost:4000
+#url:             http://brooksandrew.github.io
 disqus_shortname:
 
 # Owner/author information
@@ -38,17 +38,17 @@ bing_verify:
 links:
   - title: About
     url: /about/
-  - title: Posts
-    url: /posts/
-  - title: Theme Setup
-    url: /theme-setup/
+  - title: Projects
+    url: /projects/
+  - title: Blog
+    url: http://brooksandrew.github.io/simpleblog
     external: true
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 timezone:    America/New_York
 future:      true
-pygments:    true
-#highlighter: pygments
+#pygments:    true
+highlighter: pygments
 markdown:    kramdown
 
 # https://github.com/mojombo/jekyll/wiki/Permalinks
