adding github to config

--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ owner:
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
   twitter:
   facebook:
-  github:
+  github:        brooksandrew
   stackoverflow:
   linkedin:
   instagram:
