--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ links:
     url: /projects/
   - title: Blog
     url: https://sumendar.github.io/simpleblog
-    external: false
+    external: true
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 timezone:    America/New_York
