--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ disqus_shortname:
 owner:
   name:           Sumendar Karupakala
   avatar:         bio-photo.jpg
-  bio:            "internationalist turned economist turned data scientist"
+  bio:            "Data Science, Data Journalism, Open Data, Big Data, Data Visualisation"
   email:          andrewbrooksct@gmail.com
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
   twitter:
