--- a/_config.yml
+++ b/_config.yml
@@ -13,11 +13,11 @@ owner:
   bio:            "Data Science Data Journalism Open Data Big Data Data Visualisation"
   email:          andrewbrooksct@gmail.com
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
-  twitter:
+  twitter:       sumendar
   facebook:
   github:        sumendar
   stackoverflow:
-  linkedin:
+  linkedin:      sumendar
   instagram:
   lastfm:
   tumblr:
