--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ title:            Sumendar Karupakala
 description:      homepage
 # Your site's domain goes here. Leave localhost server or blank when working locally.
 # url:              http://localhost:4000
-# url:              https://sumendar.github.io
-  url:              http://www.sumendar.com
+  url:              https://sumendar.github.io
+#  url:              http://www.sumendar.com
 disqus_shortname:
 
 # Owner/author information
