--- a/_config.yml
+++ b/_config.yml
@@ -1,23 +1,22 @@
 title:            Sumendar Karupakala
 description:      homepage
 # Your site's domain goes here. Leave localhost server or blank when working locally.
-# url:              http://localhost:4000
- url:               https://sumendar.github.io
-#  url:              http://www.sumendar.com
+#url:              http://localhost:4000
+url:             http://sumendar.github.io
 disqus_shortname:
 
 # Owner/author information
 owner:
-  name:           Sumendar Karupakala
+  name:           andrew brooks
   avatar:         bio-photo.jpg
-  bio:            Data Science Data Journalism Open Data Big Data Data Visualisation
+  bio:            "internationalist turned economist turned data scientist"
   email:          andrewbrooksct@gmail.com
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
-  twitter: sumendar       
+  twitter:
   facebook:
-  github:        sumendar
+  github:        brooksandrew
   stackoverflow:
-  linkedin: sumendar      
+  linkedin:
   instagram:
   lastfm:
   tumblr:
