--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ disqus_shortname:
 owner:
   name:           andrew brooks
   avatar:         bio-photo.jpg
-  bio:            "internationalist turned economist turned data scientist"
+  bio:            "Data Science Analyst"
   email:          andrewbrooksct@gmail.com
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
   twitter:
