--- a/_config.yml
+++ b/_config.yml
@@ -7,14 +7,14 @@ disqus_shortname:
 
 # Owner/author information
 owner:
-  name:           andrew brooks
+  name:           Sumendar Karupakala
   avatar:         bio-photo.jpg
   bio:            "Data Science Analyst"
   email:          andrewbrooksct@gmail.com
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
   twitter:
   facebook:
-  github:        brooksandrew
+  github:        sumendar
   stackoverflow:
   linkedin:
   instagram:
