--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ owner:
   bio:            "Data Science Analyst"
   email:          andrewbrooksct@gmail.com
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
-  twitter:
+  twitter:        sumendar
   facebook:
   github:        sumendar
   stackoverflow:
