--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ owner:
   facebook:
   github:        sumendar
   stackoverflow:
-  linkedin:
+  linkedin:       sumendar
   instagram:
   lastfm:
   tumblr:
