--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ description:      homepage
 # Your site's domain goes here. Leave localhost server or blank when working locally.
 #url:              http://localhost:4000
 url:             http://sumendar.github.io
-disqus_shortname:
+disqus_shortname: sumendar
 
 # Owner/author information
 owner:
