--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ owner:
   name:           Sumendar Karupakala
   avatar:         bio-photo.jpg
   bio:            "Data Science Analyst"
-  email:          andrewbrooksct@gmail.com
+  email:          sumendar@gmail.com
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
   twitter:        sumendar
   facebook:
