--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title:            Sumendar Karupakala
-description:      homepage
+description:      Data Science Blog
 # Your site's domain goes here. Leave localhost server or blank when working locally.
 #url:              http://localhost:4000
 #url:             http://sumendar.github.io
