--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,8 @@ owner:
   dribbble:
   # For Google Authorship https://plus.google.com/authorship
   google_plus:
+  gems:
+  - jekyll-feed
 
 # Analytics and webmaster tools stuff goes here
 google_analytics: "UA-52978786-1"
