--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description:      Data Science Blog
 #url:              http://localhost:4000
 #url:             http://sumendar.github.io
 #url:             http://www.sumendar.com
-url:             /sumendar1.github.io
+url:             http://www.sumendar.com
 disqus_shortname: sumendar
 
 # Owner/author information
